test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_expect_values/src/payable_attr.sw
library;

// `payable` attribute does not expect any arguments.
